--- a/src/global_interface/config/fast_lio/mid360.yaml
+++ b/src/global_interface/config/fast_lio/mid360.yaml
@@ -41,10 +41,16 @@ mapping:
 imu2lidar:
     extrinsic_T: [ 0.046263, 0.005615, 0.113574]
 
-    # 雷达imu自动估的转180度
-    extrinsic_R: [-9.12955030e-01,  5.82063204e-03,  4.08018667e-01,
-                     1.11804746e-16, -9.99898262e-01,  1.42641510e-02,
-                     4.08060182e-01,  1.30225284e-02,  9.12862148e-01]
+    # # 雷达imu自动估的转180度
+    # extrinsic_R: [-9.12955030e-01,  5.82063204e-03,  4.08018667e-01,
+    #                  1.11804746e-16, -9.99898262e-01,  1.42641510e-02,
+    #                  4.08060182e-01,  1.30225284e-02,  9.12862148e-01]
+
+    # 雷达加增高垫的标定
+    extrinsic_R: [-9.34155765e-01, 1.15741066e-16, 3.56865531e-01,
+                    7.18268579e-03, -9.99797428e-01, 1.88018925e-02,
+                    3.56793240e-01, 2.01271492e-02, 9.33966531e-01]
+
 
 publish:
     path_en:  true
