--- a/src/fast_lio/.gitignore
+++ b/src/fast_lio/.gitignore
@@ -1,8 +1,8 @@
 build
-FAST-LIO/Log/*.png
-FAST-LIO/Log/*.txt
-FAST-LIO/Log/*.csv
-FAST-LIO/Log/*.pdf
+Log/*.png
+Log/*.txt
+Log/*.csv
+Log/*.pdf
 .vscode/c_cpp_properties.json
 .vscode/settings.json
 PCD/*.pcd
